# trading_bot

./: .gitignore  README.md
py/: BTC-USD  PERSISTENCE_SUMMARY.md  SECURITY.md  VERSIONING.md  check_all_apis.py  check_api.py  pyproject.toml  test_constants.py
py/data/: README.md  trades.db
py/examples/: analyze_performance.py  environment_config.py  quickstart_persistence.py
py/models/: README.md
py/tests/: README.md  TEST_STATUS.md  TEST_SUMMARY.md  conftest.py  test_api_contracts.py  test_config.py  test_constants.py  test_data_curator.py  test_indicators.py  test_init.py  test_ml_predictor.py  test_paper_trading.py  test_strategy.py  test_trade_history.py
py/tests/fixtures/: README.md
py/trading_bot/: README.md  __init__.py  _constants.py  bot.py  config.py  data_curator.py  exchange_client.py  indicators.py  ml_predictor.py  requirements.txt  strategy.py  trade_history.py
